--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "embla-carousel-react": "^8.6.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-ripples": "^2.2.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
